fix(#169580379): Fix label for attribute.

--- a/app/views/shared/_info_template.html.erb
+++ b/app/views/shared/_info_template.html.erb
@@ -1,5 +1,5 @@
 <% if form %>
-  <%= form.label label_for do %>
+  <%= form.label nil, for: label_for do %>
     <%= message %>
     <% if info_message -%>
       <button
