--- a/app/views/site_page/search_results.html.erb
+++ b/app/views/site_page/search_results.html.erb
@@ -14,7 +14,8 @@
   search: @search_string,
   page: @page_number,
   totalPages: @total_pages,
-  results: @search_results
+  results: @search_results,
+  template: @site_page.site.site_template.name
 }) %>
 
 <script type="text/javascript">
