feat(#169761868): Hide measurement tool for India template.

--- a/app/assets/stylesheets/front/_base-theme-ind.scss
+++ b/app/assets/stylesheets/front/_base-theme-ind.scss
@@ -1135,6 +1135,10 @@ form{
   display: none !important;
 }
 
+.control-panel__measurement{
+  display: none !important;
+}
+
 .atlas_wrapper{
 
   text-align: center;
