--- a/app/views/admin/site_steps/_footer.html.erb
+++ b/app/views/admin/site_steps/_footer.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_pack_tag 'application' %>
+
 <div class="c-action-bar">
   <div class="wrapper">
     <%= link_to 'Cancel', admin_sites_path, class: 'c-button -outline -dark-text' %>
@@ -7,7 +9,12 @@
           <%= f.button Admin::SiteStepsController::CONTINUE, value: Admin::SiteStepsController::CONTINUE, type: 'submit', method: :put, class: 'c-button -outline -dark-text' %>
         <% end %>
         <% if step == 'style' %>
-          <div class="preview-button-selector"></div>
+          <%= react_component('AdminPreviewButton', {
+            text: Admin::SiteStepsController::PREVIEW,
+            className: 'c-button -outline -dark-text',
+            host: Rails.env.development? ? 'http://localhost:3000' : ENV['API_URL'],
+            slug: @site.slug
+          }, { tag: 'span' }) %>
         <% end %>
         <%= f.button Admin::SiteStepsController::SAVE, value: Admin::SiteStepsController::SAVE, type: 'submit', method: :put, class: 'c-button' %>
       <% else %>
