Fix a styling issue with the Preview button
The button was too close to the others.

--- a/app/views/admin/site_steps/_footer.html.erb
+++ b/app/views/admin/site_steps/_footer.html.erb
@@ -13,7 +13,9 @@
             text: Admin::SiteStepsController::PREVIEW,
             className: 'c-button -outline -dark-text',
             slug: @site.slug
-          }, { tag: 'span' }) %>
+          }, {
+            class: 'button-wrapper'
+          }) %>
         <% end %>
         <%= f.button Admin::SiteStepsController::SAVE, value: Admin::SiteStepsController::SAVE, type: 'submit', method: :put, class: 'c-button' %>
       <% else %>
