--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -1,3 +1,4 @@
+<%# WARN: if you make any change to this template, please update app/javascript/containsers/AdminPreviewStatic.js %>
 <header class="c-header js-header">
   <div class="mobile-drawer js-mobile-drawer">
     <div class="wrapper">
