--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -8,10 +8,12 @@
   <script src="https://unpkg.com/tippy.js@3.3.0/dist/tippy.all.min.js" defer></script>
   <%= javascript_include_tag 'admin', 'data-turbolinks-track': 'reload' %>
   <%= favicon_link_tag %>
+  <%= yield :head %>
 </head>
 <body>
 <%= Gon::Base.render_data %>
   <%= render 'admin/header' %>
+  <%= render 'front/icons' %>
   <%= yield :extended_header %>
   <%= yield %>
   <%= render 'shared/messages' %>
