--- a/app/views/management/sites/associations.html.erb
+++ b/app/views/management/sites/associations.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <%= form_for @site, url: management_site_update_associations_path, method: :put do |f| %>
-  <div class="l-site-creation -users">
+  <div class="l-user-list">
     <div class="wrapper">
       <div class="c-cards-list">
         <%= f.fields_for :user_site_associations, @site.user_site_associations.sort do |ff| %>
