Move the position of the preview button

--- a/app/assets/stylesheets/components/shared/c-action-bar.scss
+++ b/app/assets/stylesheets/components/shared/c-action-bar.scss
@@ -15,8 +15,11 @@
   .c-button + .c-button,
   .c-button + .button-wrapper,
   .button-wrapper + .c-button {
-    display: inline-block; // Needed for .button-wrapper
     margin-left: 15px;
+  }
+
+  .button-wrapper {
+    display: inline-block;
   }
 
   &.-wide {
