--- a/app/views/admin/site_steps/_footer.html.erb
+++ b/app/views/admin/site_steps/_footer.html.erb
@@ -3,14 +3,14 @@
 <div class="c-action-bar">
   <div class="wrapper">
     <%= link_to 'Cancel', admin_sites_path, class: 'c-button -outline -dark-text' %>
-    <div>
+    <div class="flex">
       <% if @site.id %>
         <% if step == 'style' %>
           <%= react_component('AdminPreviewButton', {
             className: 'c-button -outline -dark-text',
             slug: @site.slug
           }, {
-            class: 'button-wrapper'
+            class: 'c-admin-preview-button'
           }) %>
         <% end %>
         <% unless local_assigns[:no_continue] %>
