Remove Continue button on tag searching tab

--- a/app/views/management/page_steps/tag_searching.erb
+++ b/app/views/management/page_steps/tag_searching.erb
@@ -28,5 +28,5 @@
       </div>
     </div>
   </div>
-  <%= render partial: 'management/steps_shared/footer', locals: {f: f, always_save: true, publish: true} %>
+  <%= render partial: 'management/steps_shared/footer', locals: {f: f, no_continue: true, always_save: true, publish: true} %>
 <% end %>
