--- a/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
+++ b/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
@@ -111,6 +111,41 @@
         }
       }
     }
+    
+    .fa-wysiwyg-configuration {
+      display: flex;
+      align-items: stretch;
+      border: 1px solid $color-6;
+
+      header {
+        position: relative;
+        flex-basis: 40px;
+        flex-shrink: 0;
+        flex-grow: 0;
+        background-color: $color-6;
+        
+        span {
+          position: absolute;
+          bottom: 0;
+          display: block;
+          transform: rotate(-90deg) translate(10px, 100%);
+          transform-origin: bottom left;
+          color: $color-3;
+          line-height: 40px;
+          text-transform: uppercase;
+          font-weight: $font-weight-bold;
+        }
+      }
+
+      main {
+        flex-grow: 1;
+        padding: 10px 15px;
+
+        > .no-margin-bottom {
+          margin-bottom: 0;
+        }
+      }
+    }
   }
 
   blockquote {
