--- a/app/assets/stylesheets/components/shared/c-widget-card.scss
+++ b/app/assets/stylesheets/components/shared/c-widget-card.scss
@@ -2,8 +2,12 @@
   width: 100%;
   padding: 30px;
   border-radius: 4px;
-  border: 1px solid rgba($color-7, 0.1);
-  box-shadow: 0 1px 2px 0 rgba($color-5, 0.1);
+  border: 1px solid transparent;
+
+  &.-border {
+    border-color: rgba($color-7, 0.1);
+    box-shadow: 0 1px 2px 0 rgba($color-5, 0.1);
+  }
 
   > .title {
     margin-bottom: 10px;
