Add a button to download widgets as PNGs

--- a/app/assets/stylesheets/components/shared/c-widget-card.scss
+++ b/app/assets/stylesheets/components/shared/c-widget-card.scss
@@ -83,6 +83,10 @@
             fill: $color-4;
           }
         }
+
+        & + a {
+          margin-left: 10px;
+        }
       }
     }
   }
