--- a/app/assets/stylesheets/management/application.scss
+++ b/app/assets/stylesheets/management/application.scss
@@ -7,6 +7,7 @@
   '../../../../node_modules/vizz-wysiwyg/build/rw',
   '../helpers',
   'settings',
+  'c-delete-dataset-modal',
   '../base',
   '../layouts/management/*',
   '../components/shared/**/*',
