Add capibility to Continue or Save to title dataset step
- Fix logic to recover datasets
- Fix failing tests
- Fix bugs on connector step

--- a/app/assets/javascripts/templates/management/dataset-connectors.hbs
+++ b/app/assets/javascripts/templates/management/dataset-connectors.hbs
@@ -44,7 +44,11 @@
 
   <div class="input-container{{#if_eq fileUploader 'file'}}--disabled{{/if_eq}}">
     <label for="url">URL:</label>
-    <input id="url" name="dataset[connector_url]" class="js-url" placeholder="Dataset URL" />
+    <input id="url"
+           name="dataset[connector_url]"
+           class="js-url"
+           placeholder="Dataset URL"
+           value="{{selected.connector_url}}" />
   </div>
 
   <div class="input-container{{#if dataPathDisabled}}--disabled{{/if}}">
