--- a/app/views/management/page_steps/open_content_v2.html.erb
+++ b/app/views/management/page_steps/open_content_v2.html.erb
@@ -26,6 +26,6 @@
 
   </div>
 
-  <%= render partial: 'management/steps_shared/footer', locals: {f: f, no_continue: true, always_save: true, publish: !@page.enabled} %>
+  <%= render partial: 'management/steps_shared/footer', locals: {f: f} %>
   <%= render partial: 'shared/errors', locals: { resource: @page } %>
 <% end %>
