--- a/app/views/management/steps_shared/_finish_footer.html.erb
+++ b/app/views/management/steps_shared/_finish_footer.html.erb
@@ -2,14 +2,21 @@
   <div class="wrapper">
     <%= link_to 'Cancel', management_site_site_pages_path(@site.slug), class: 'c-button -outline -dark-text' %>
     <div>
-      <%= f.button Management::PageStepsController::SAVE, value: Management::PageStepsController::SAVE, type: 'submit', class: 'c-button js-submit' %>
+      <%= f.button Management::PageStepsController::SAVE,
+        type: 'button',
+        value: Management::PageStepsController::SAVE,
+        class: 'c-button -outline -dark-text' %>
 
-      <% if @page.persisted? %>
-        <% if @page.enabled %>
-          <%= f.button Management::PageStepsController::UNPUBLISH, value: Management::PageStepsController::UNPUBLISH, type: 'submit', class: 'c-button -outline -dark-text' %>
-        <% else %>
-          <%= f.button Management::PageStepsController::PUBLISH, value: Management::PageStepsController::PUBLISH, type: 'submit', class: 'c-button -outline -dark-text' %>
-        <% end %>
+      <% if @page.enabled %>
+        <%= f.button Management::PageStepsController::UNPUBLISH,
+          value: Management::PageStepsController::UNPUBLISH,
+          type: 'submit',
+          class: 'c-button js-submit' %>
+      <% else %>
+        <%= f.button Management::PageStepsController::PUBLISH,
+        value: Management::PageStepsController::PUBLISH,
+        type: 'submit',
+        class: 'c-button js-submit' %>
       <% end %>
     </div>
   </div>
