--- a/app/views/management/datasets/index.html.erb
+++ b/app/views/management/datasets/index.html.erb
@@ -5,5 +5,5 @@
 
 <%= javascript_pack_tag 'application' %>
 <%= react_component('DatasetsPage', {
-  datasets: @filteredDatasets
+  datasets: @filtered_datasets
 } ) %>
