Fix bug with layerPanel and analysisModules on map site pages

--- a/app/views/management/site_pages/map/_analysis.html.erb
+++ b/app/views/management/site_pages/map/_analysis.html.erb
@@ -25,7 +25,7 @@
       });
       var analysisModulesValue;
       try {
-        analysisModulesValue = JSON.parse('<%= settings.object.analysisModules.gsub("'", "\\\\'").squish.html_safe rescue {} %>');
+        analysisModulesValue = JSON.parse('<%= settings.object.analysisModules.squish.gsub("'", "\\\\'").squish.html_safe %>');
       } catch (err) {
         analysisModulesValue = JSON.parse('{}');
       }
