--- a/app/views/management/page_steps/link.html.erb
+++ b/app/views/management/page_steps/link.html.erb
@@ -53,5 +53,5 @@
       </div>
     </div>
   </div>
-  <%= render partial: 'management/steps_shared/footer', locals: {f: f, always_save: true, no_continue: true} %>
+  <%= render partial: 'management/steps_shared/footer', locals: {f: f, always_save: true, continue: false} %>
 <% end %>
