--- a/app/views/management/dataset_steps/options.html.erb
+++ b/app/views/management/dataset_steps/options.html.erb
@@ -19,7 +19,7 @@
     columns: @metadata_columns
   }) %>
 
-  <%= render partial: 'management/steps_shared/footer', locals: { f: f, cancel: management_site_datasets_path(@site.slug), no_continue: true} %>
+  <%= render partial: 'management/steps_shared/footer', locals: { f: f, cancel: management_site_datasets_path(@site.slug), continue: false} %>
 <% end %>
 
 <%= render partial: 'shared/errors', locals: { resource: @dataset } %>
