--- a/app/views/management/page_steps/confirmation.html.erb
+++ b/app/views/management/page_steps/confirmation.html.erb
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
-  <%= render partial: 'management/steps_shared/footer', locals: {f: f, always_save: true, no_continue: true, publish: true} %>
+  <%= render partial: 'management/steps_shared/footer', locals: {f: f, always_save: true, continue: false, publish: true} %>
 <% end %>
 
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
