--- a/app/views/management/steps_shared/_footer.html.erb
+++ b/app/views/management/steps_shared/_footer.html.erb
@@ -6,7 +6,7 @@
       <%= link_to 'Cancel', management_site_site_pages_path(@site.slug), class: 'c-button -outline -dark-text' %>
   <% end %>
     <div>
-      <% unless local_assigns[:no_continue] %>
+      <% if !local_assigns.key?(:continue) || local_assigns[:continue] %>
         <%= f.button Management::PageStepsController::CONTINUE,
           type: continue_button_type(f.object.id, local_assigns[:always_save], local_assigns[:never_save], local_assigns[:publish]),
           value: Management::PageStepsController::CONTINUE,
